--- a/Home/project.config.json
+++ b/Home/project.config.json
@@ -13,7 +13,7 @@
 	"compileType": "miniprogram",
 	"libVersion": "2.0.8",
 	"appid": "wx90212e6f1a0a9b76",
-	"projectname": "Home",
+	"projectname": "small",
 	"isGameTourist": false,
 	"condition": {
 		"search": {
