--- a/Home/app.json
+++ b/Home/app.json
@@ -1,12 +1,20 @@
 {
   "pages":[
+    "pages/view/orderOwner/addConstruinfo/addConstruinfo",
     
     "pages/view/orderWait/list/list",
     "pages/view/orderWait/details/details",
     "pages/view/orderWait/reportAccept/reportAccept",
+    "pages/view/orderWait/disclosureStart/disclosureStart",
+    
 
     "pages/view/orderOwner/list/list",
+    "pages/view/orderOwner/followSubproject/followSubproject",
+    "pages/view/orderOwner/subprojScan/subprojScan",
     "pages/view/orderOwner/details/details",
+    "pages/view/orderOwner/addBasicinfo/addBasicinfo",
+    
+    
     
     
     "pages/view/userLogin/login/login",
