--- a/Home/app.json
+++ b/Home/app.json
@@ -14,6 +14,11 @@
     "pages/view/orderOwner/details/details",
     "pages/view/orderOwner/addBasicinfo/addBasicinfo",
     "pages/view/orderOwner/addConstruinfo/addConstruinfo",
+    "pages/view/orderOwner/disclosureStart/disclosureStart",
+    "pages/view/orderOwner/preview/preview",
+    "pages/view/orderOwner/reportAccept/reportAccept",
+    
+    
 
     "pages/view/addDesigner/addDesigner",
     
