--- a/Home/project.config.json
+++ b/Home/project.config.json
@@ -12,7 +12,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.1.1",
-	"appid": "wx90212e6f1a0a9b76",
+	"appid": "wxa8fcfcd3f15c7153",
 	"projectname": "small",
 	"isGameTourist": false,
 	"condition": {
