--- a/project.config.json
+++ b/project.config.json
@@ -12,8 +12,8 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.0.4",
-	"appid": "wx90212e6f1a0a9b76",
-	"projectname": "newProject",
+	"appid": "wxa8fcfcd3f15c7153",
+	"projectname": "small",
 	"isGameTourist": false,
 	"condition": {
 		"search": {
